--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,123 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+
+}
+.center{
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 2%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main{
+  padding: 40px 0px;
+  background-image: url('https://free4kwallpapers.com/uploads/originals/2022/04/20/rubiks-cube-digital-art-wallpaper.jpg');
+  background-position: center;
+  background-size: cover;
+  min-height: 400px;
+}
+.menu{
+  width: 100%;
+  display: flex;
+  flex-direction:  row;
+  justify-content: space-between;
+}
+.menu h3{
+  color: white;
+  font-size: 30px;
+
+}
+.menu h3:hover{
+  background-color: orange;
+}
+.menu a{
+  color: white;
+  text-decoration: none;
+  border: 1px solid white;
+  padding: 3px 8px;
+  border-radius: 5px;
+}
+
+.menu a:hover{
+  background-color: orange;
+}
+
+.form{
+  display: flex;
+  width: 100%;
+  margin-top: 50px;
+  max-width: 600px;
+  margin: 40px auto;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.form h2{
   color: white;
+  text-transform: uppercase;
+  font-size: 28px;
 }
 
-.App-link {
-  color: #61dafb;
+.items-form{
+  margin: 0 auto;
+  max-width: 540px;
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.form input[type=text]{
+  width: 48%;
+  height: 30px;
+  margin: 8px 0px;
+  padding-left: 30px;
+
+}
+
+.form input[type=submit]{
+  width: 100%;
+  height: 40px;
+  background-color: #e7426b;
+  cursor: pointer;
+  color: white;
+  border: 0;
+  font-size: 19px;
+}
+
+
+.conteudo-single{
+  margin-top: 40px;
+  width: 50%;
+  padding: 8px;
+}
+
+section .meu{
+  height: 300px;
+  width: 600px;
+
+}
+
+.meu h1{
+  width: 100%;
+  text-align: center;
+
+}
+
+
+
+
+
+
+@media screen and (max-width: 768px) {
+  .items-form input[type=text] {
+    width: 100%;
+  }  
+  .conteudo-single{width: 100%;}
 }
